--- a/src/html/shopping.html
+++ b/src/html/shopping.html
@@ -107,13 +107,13 @@
                 <!-- 购物车商品详情 -->
                 <div>
                     <p>您的购物车里啥也没有啊~</p>
-                    <a href="">去逛逛</a>
+                    <a href="./index.html">去逛逛</a>
                 </div>
             </div>
             <!-- 已删除的商品 -->
-            <div>
-                <!-- h1文字和列表 -->
-                <div>
+            <!-- <div> -->
+            <!-- h1文字和列表 -->
+            <!-- <div>
                     <h2>已删除的商品</h2>
                     <ul>
                         <li>商品</li>
@@ -121,9 +121,9 @@
                         <li>金额</li>
                         <li>操作</li>
                     </ul>
-                </div>
-                <!-- 商品 -->
-                <div>
+                </div> -->
+            <!-- 商品 -->
+            <!-- <div>
                     <ul>
                         <li>fdasdfsdfsdfsdfsfsdfsafsdfasdfsafsdfsdf</li>
                         <li>X1</li>
@@ -134,132 +134,182 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <!-- 尾部 -->
-        <footer>
+            <!-- 尾部 -->
+            <footer>
 
-            <!-- 百强企业 品质联保 -->
-            <div>
-                <a href="">
-                    <span class="iconfont icon-xunzhang"></span>
-                    <p>百强企业 品质保证</p>
-                </a>
-                <a href="">
-                    <span class="iconfont icon-rili"></span>
-                    <p>7天退货 15天换货</p>
-                </a>
-                <a href="">
-                    <span class="iconfont icon-hezi"></span>
-                    <p>48元起免运费</p>
-                </a>
-                <a href="">
-                    <span class="iconfont icon-location"></span>
-                    <p>2000家服务店 全国联保</p>
-                </a>
-            </div>
+                <!-- 百强企业 品质联保 -->
+                <div>
+                    <a href="">
+                        <span class="iconfont icon-xunzhang"></span>
+                        <p>百强企业 品质保证</p>
+                    </a>
+                    <a href="">
+                        <span class="iconfont icon-rili"></span>
+                        <p>7天退货 15天换货</p>
+                    </a>
+                    <a href="">
+                        <span class="iconfont icon-hezi"></span>
+                        <p>48元起免运费</p>
+                    </a>
+                    <a href="">
+                        <span class="iconfont icon-location"></span>
+                        <p>2000家服务店 全国联保</p>
+                    </a>
+                </div>
 
-            <!-- 在线客服 -->
-            <div>
+                <!-- 在线客服 -->
+                <div>
 
-                <!-- 左 -->
+                    <!-- 左 -->
+                    <div>
+                        <div>
+                            <span>购物相关</span>
+                            <ul>
+                                <li>
+                                    <a href="">购物指南</a>
+                                </li>
+                                <li>
+                                    <a href="">配送方式</a>
+                                </li>
+                                <li>
+                                    <a href="">支付方式</a>
+                                </li>
+                                <li>
+                                    <a href="">常见问题</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span>保修与退换货</span>
+                            <ul>
+                                <li>
+                                    <a href="">保修政策</a>
+                                </li>
+                                <li>
+                                    <a href="">退换货政策</a>
+                                </li>
+                                <li>
+                                    <a href="">退换货流程</a>
+                                </li>
+                                <li>
+                                    <a href="">保修状态查询</a>
+                                </li>
+                                <li>
+                                    <a href="">配件防伪查询</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span>维修与技术支持</span>
+                            <ul>
+                                <li>
+                                    <a href="">服务店</a>
+                                </li>
+                                <li>
+                                    <a href="">预约维修</a>
+                                </li>
+                                <li>
+                                    <a href="">手机寄修</a>
+                                </li>
+                                <li>
+                                    <a href="">备件价格查询</a>
+                                </li>
+                                <li>
+                                    <a href="">上门服务</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span>特色服务</span>
+                            <ul>
+                                <li>
+                                    <a href="">防伪查询</a>
+                                </li>
+                                <li>
+                                    <a href="">补购保障</a>
+                                </li>
+                                <li>
+                                    <a href="">以旧换新</a>
+                                </li>
+                                <li>
+                                    <a href="">礼品包装</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span>关于我们</span>
+                            <ul>
+                                <li>
+                                    <a href="">公司介绍</a>
+                                </li>
+                                <li>
+                                    <a href="">华为商城简介</a>
+                                </li>
+                                <li>
+                                    <a href="">华为零售店</a>
+                                </li>
+                                <li>
+                                    <a href="">荣耀零售店</a>
+                                </li>
+                                <li>
+                                    <a href="">意见反馈</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span>友情链接</span>
+                            <ul>
+                                <li>
+                                    <a href="">华为集团</a>
+                                </li>
+                                <li>
+                                    <a href="">华为CBG官网</a>
+                                </li>
+                                <li>
+                                    <a href="">荣耀官网</a>
+                                </li>
+                                <li>
+                                    <a href="">花粉俱乐部</a>
+                                </li>
+                                <li>
+                                    <a href="">华为云</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- 右 -->
+                    <div>
+                        <div>
+                            <h1>950805</h1>
+                            <p>7x24小时客服热线 (仅收市话费)</p>
+                            <div>
+                                <span class="iconfont icon-icon_huabanfuben"></span>
+                                <p>在线客服</p>
+                            </div>
+                            <div>
+                                <span>关注Vmall:</span>
+                                <ul>
+                                    <li><a href=""><span class="iconfont icon-weixin"></span></a></li>
+                                    <li><a href=""><span class="iconfont icon-toutiao"></span></a></li>
+                                    <li><a href=""><span class="iconfont icon-weibo"></span></a></li>
+                                    <li><a href=""><span class="iconfont icon-baidu"></span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- VMALL -->
                 <div>
                     <div>
-                        <span>购物相关</span>
-                        <ul>
-                            <li>
-                                <a href="">购物指南</a>
-                            </li>
-                            <li>
-                                <a href="">配送方式</a>
-                            </li>
-                            <li>
-                                <a href="">支付方式</a>
-                            </li>
-                            <li>
-                                <a href="">常见问题</a>
-                            </li>
-                        </ul>
+                        <img src="../img/VMALL.png" alt="">
                     </div>
+
+                    <!-- 中间文字 -->
                     <div>
-                        <span>保修与退换货</span>
-                        <ul>
-                            <li>
-                                <a href="">保修政策</a>
-                            </li>
-                            <li>
-                                <a href="">退换货政策</a>
-                            </li>
-                            <li>
-                                <a href="">退换货流程</a>
-                            </li>
-                            <li>
-                                <a href="">保修状态查询</a>
-                            </li>
-                            <li>
-                                <a href="">配件防伪查询</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <span>维修与技术支持</span>
-                        <ul>
-                            <li>
-                                <a href="">服务店</a>
-                            </li>
-                            <li>
-                                <a href="">预约维修</a>
-                            </li>
-                            <li>
-                                <a href="">手机寄修</a>
-                            </li>
-                            <li>
-                                <a href="">备件价格查询</a>
-                            </li>
-                            <li>
-                                <a href="">上门服务</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <span>特色服务</span>
-                        <ul>
-                            <li>
-                                <a href="">防伪查询</a>
-                            </li>
-                            <li>
-                                <a href="">补购保障</a>
-                            </li>
-                            <li>
-                                <a href="">以旧换新</a>
-                            </li>
-                            <li>
-                                <a href="">礼品包装</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <span>关于我们</span>
-                        <ul>
-                            <li>
-                                <a href="">公司介绍</a>
-                            </li>
-                            <li>
-                                <a href="">华为商城简介</a>
-                            </li>
-                            <li>
-                                <a href="">华为零售店</a>
-                            </li>
-                            <li>
-                                <a href="">荣耀零售店</a>
-                            </li>
-                            <li>
-                                <a href="">意见反馈</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <span>友情链接</span>
                         <ul>
                             <li>
                                 <a href="">华为集团</a>
@@ -274,89 +324,39 @@
                                 <a href="">花粉俱乐部</a>
                             </li>
                             <li>
-                                <a href="">华为云</a>
+                                <a href="">华为应用市场</a>
                             </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- 右 -->
-                <div>
-                    <div>
-                        <h1>950805</h1>
-                        <p>7x24小时客服热线 (仅收市话费)</p>
-                        <div>
-                            <span class="iconfont icon-icon_huabanfuben"></span>
-                            <p>在线客服</p>
-                        </div>
-                        <div>
-                            <span>关注Vmall:</span>
-                            <ul>
-                                <li><a href=""><span class="iconfont icon-weixin"></span></a></li>
-                                <li><a href=""><span class="iconfont icon-toutiao"></span></a></li>
-                                <li><a href=""><span class="iconfont icon-weibo"></span></a></li>
-                                <li><a href=""><span class="iconfont icon-baidu"></span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- VMALL -->
-            <div>
-                <div>
-                    <img src="../img/VMALL.png" alt="">
-                </div>
-
-                <!-- 中间文字 -->
-                <div>
-                    <ul>
-                        <li>
-                            <a href="">华为集团</a>
-                        </li>
-                        <li>
-                            <a href="">华为CBG官网</a>
-                        </li>
-                        <li>
-                            <a href="">荣耀官网</a>
-                        </li>
-                        <li>
-                            <a href="">花粉俱乐部</a>
-                        </li>
-                        <li>
-                            <a href="">华为应用市场</a>
-                        </li>
-                        <li>
-                            <a href="">EMUI</a>
-                        </li>
-                        <li>
-                            <a href="">华为终端云空间</a>
-                        </li>
-                        <li>
-                            <a href="">开发者联盟</a>
-                        </li>
-                        <li>
-                            <a href="">华为商城手机版</a>
-                        </li>
-                        <li>
-                            <a href="">网站地图</a>
-                        </li>
-                    </ul><br>
-                    <span>隐私声明 服务协议 COOKIES Copyright &copy; 2012-2020 华为终端有限公司 版权所有 粤ICP备19015064号 | 粤公网安备 44190002003939号<br>增值电信业务经营许可证：粤B2-20190762 | 备案主体编号：44201919072182
+                            <li>
+                                <a href="">EMUI</a>
+                            </li>
+                            <li>
+                                <a href="">华为终端云空间</a>
+                            </li>
+                            <li>
+                                <a href="">开发者联盟</a>
+                            </li>
+                            <li>
+                                <a href="">华为商城手机版</a>
+                            </li>
+                            <li>
+                                <a href="">网站地图</a>
+                            </li>
+                        </ul><br>
+                        <span>隐私声明 服务协议 COOKIES Copyright &copy; 2012-2020 华为终端有限公司 版权所有 粤ICP备19015064号 | 粤公网安备 44190002003939号<br>增值电信业务经营许可证：粤B2-20190762 | 备案主体编号：44201919072182
                     </span>
+                    </div>
+
+                    <!-- 营业执照logo -->
+                    <div>
+                        <a href="">
+                            <img src="../img/yyzz.png" alt="">
+                        </a>
+
+                    </div>
                 </div>
+            </footer>
 
-                <!-- 营业执照logo -->
-                <div>
-                    <a href="">
-                        <img src="../img/yyzz.png" alt="">
-                    </a>
-
-                </div>
-            </div>
-        </footer>
-
-    </div>
+        </div>
 
     </div>
 
