--- a/src/html/login.html
+++ b/src/html/login.html
@@ -7,6 +7,7 @@
     <title>登录页面</title>
     <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="../css/font_2032435_7b3yfplnnof/iconfont.css">
+    <script src="../js/login.js" type="module"></script>
 </head>
 
 <body>
@@ -33,16 +34,26 @@
         </div>
 
         <!-- 用户名密码 -->
-        <div>
-            <input type="text" placeholder="手机号/邮箱地址/华为号">
-            <input type="text" placeholder="密码">
+        <div id="from">
+
+            <div>
+                <input id="username" type="text" placeholder="手机号/邮箱地址/华为号">
+                <span class="username"></span>
+            </div>
+
+            <div>
+                <input id="password" type="text" placeholder="密码">
+                <span class="password"></span>
+            </div>
+
             <div>
                 <a href="">短信验证码登录</a>
             </div>
+
             <input type="submit" value="登录">
             <ul>
                 <li>
-                    <a href="">注册</a>
+                    <a href="./signin.html">注册</a>
                 </li>
                 <li>
                     <a href="">忘记密码</a>
